--- a/AmazonClone/index.html
+++ b/AmazonClone/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Amazon clone</h1>
+    <h1>Amazon clone </h1>
+    <h1>payment gateway added </h1>
 </body>
 </html>
